// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`draw_group_cap draws_capping_group 1`] = `
<canvas
  data-snapshot-image="5688a624edaf824c1a0ed165f38cce53d064a2b262a2f00b1cdb728cd8ccf8a14ab33ce9f6e4dd6c67816531137eba93bbce73a387fd73075c494302138ecfac"
/>
`;

exports[`draw_group_cap draws_singleship_cap 1`] = `
<canvas
  data-snapshot-image="cc27940d6dcd54927e719f47702ee755e147e8cb809128528e6d08a6b64ef5899ada40698260c4ea8c17ade473a5331aa3316ffbeaf3af8a2964fe612c378b3b"
/>
`;
